--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "next": "^9.4.4",
+    "next-ga": "^2.3.4",
     "next-seo": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
