--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/react-dom": "^16.9.8",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "bootstrap": "^4.5.0",
     "next": "^9.4.4",
     "next-ga": "^2.3.4",
     "next-seo": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scroll": "^1.7.16"
   },
